# Pixie-ZKVM

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: rust.yml
src/: e2e_tests.rs  lib.rs  preflight_simulator.rs  stark_cpu.rs  stark_memory.rs  stark_pixie_zkvm.rs  stark_program_instructions.rs  utilities.rs  utility_macros.rs  vm_specs.rs
