[package]
name = "pixie_zkvm"
version = "0.1.0"
edition = "2021"

[dependencies]
# Depending on PLONKY2 v0.2.3
plonky2 = { git = "https://github.com/0xPolygonZero/plonky2", rev = "76da138" }
starky = { git = "https://github.com/0xPolygonZero/plonky2", rev = "76da138" }
anyhow = "1.0.86"
prettytable-rs = "0.10.0"
